--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>21</java.version>
     <plexus-compiler-eclipse.version>2.13.0</plexus-compiler-eclipse.version>
-    <ecj.version>3.36.0</ecj.version>
+    <ecj.version>3.40.0</ecj.version>
     <parent.root>${project.basedir}</parent.root>
   </properties>
 
@@ -75,6 +75,11 @@
     </plugins>
   </build>
   <dependencies>
+    <dependency>
+      <groupId>org.jspecify</groupId>
+      <artifactId>jspecify</artifactId>
+      <version>1.0.0</version>
+    </dependency>
     <dependency>
       <groupId>org.eclipse.jdt</groupId>
       <artifactId>org.eclipse.jdt.annotation</artifactId>
